fix image stretching

--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -6,7 +6,7 @@
 }
 
 .image {
-  height: 100%;
+  height: auto;
   max-height: 98vh;
   max-width: 65%;
   padding: 35px;
